# cpp_arcus_performax_control

./: .clang-format  CMakeLists.txt  README.md  main.cpp  script.lua
.cache/clangd/index/: lua_api.cpp.83249E5764CF219D.idx  lua_api.h.D5E7867A7002E37F.idx  luaapi.cpp.92879D3913A4379F.idx  luaapi.h.4AB20B8685F2C38B.idx  main.cpp.51824884B5CBFD95.idx  mainwindow.cpp.3701D857DB9B2D12.idx  mainwindow.h.FD3C5374203A844F.idx  sinusoidalstimulation.cpp.A3777A2CDB3A88D3.idx  sinusoidalstimulation.h.71CA8F26D7474BEF.idx
gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
luaapi/: luaapi.cpp  luaapi.h
plugins/sinusoidalstimulation/: sinusoidalstimulation.cpp  sinusoidalstimulation.h  sinusoidalstimulation.ui
stage_control/: .clang-format  CMakeLists.txt
stage_control/.cache/clangd/index/: device.cpp.89351D75039A396C.idx  device.cpp.916DCD3890DA1200.idx  device.h.4E00D284ACB24649.idx  device.h.AD4D6BC12629923E.idx  device.h.F2309690E2E71376.idx  device.h.FDF9FF63BA1CCCB2.idx  main.cpp.714CDCCD60155C79.idx  result.cpp.01817E01BA59FA28.idx  result.h.ADBA7DC780700FC7.idx  transferqueue.cpp.3D61F39B35459A88.idx  transferqueue.h.209384A413EB3212.idx  transferqueue.h.56783A59678123F6.idx  usbdevice.cpp.64590CA9FA8129CE.idx  usbdevice.h.E73FCC4F74CDD9A4.idx
stage_control/src/: device.cpp  device.h  main.cpp  transferqueue.h
